# business_rule_engine

./: .gitmodules  README.md  app.py  app_automated.py  pyproject.toml  requirements.txt  setup.py
repos/bre02/: README.md  flow.py
repos/bre02/bre/: bre_flow.py
repos/bre02/bre/decision_tables/: update_all_decision_tables_script.py
repos/bre02/bre/decision_tables/cache/: Applicant_Risk_Rating.pkl
repos/bre02/bre/decision_tables/raw/: Applicant_Risk_Rating.xlsx
repos/bre02/bre/functions/: rule1.py
repos/bre02/models/: generate_models.py  mpp.xsd
rules/: base.py
tests/: run_test_cases.py  unit_test.py  unit_test_bre.py
utils/: logger.py  utils.py
